// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FilterOption correctly 1`] = `
<div
  className="checkbox undefined"
>
  <label
    className="checkbox_label"
    htmlFor="4AGRI"
  >
    <input
      checked={false}
      className="list-group-item fdk-label fdk-label-default"
      id="4AGRI"
      onChange={[MockFunction]}
      type="checkbox"
      value="AGRI"
    />
    <span
      className="checkbox-replacement"
    />
    Agriculture, fisheries, forestry and food
     
    (18)
  </label>
</div>
`;

exports[`should render FilterOption correctly with no corresponding theme 1`] = `
<div
  className="checkbox undefined"
>
  <label
    className="checkbox_label"
    htmlFor="4JUST"
  >
    <input
      checked={false}
      className="list-group-item fdk-label fdk-label-default"
      id="4JUST"
      onChange={[MockFunction]}
      type="checkbox"
      value="JUST"
    />
    <span
      className="checkbox-replacement"
    />
    Unknown
     
    (18)
  </label>
</div>
`;

exports[`should render FilterOption correctly with no theme 1`] = `
<div
  className="checkbox null"
>
  <label
    className="checkbox_label"
    htmlFor="0PUBLIC"
  >
    <input
      checked={false}
      className="list-group-item fdk-label fdk-label-default"
      id="0PUBLIC"
      onChange={[MockFunction]}
      type="checkbox"
      value="PUBLIC"
    />
    <span
      className="checkbox-replacement"
    />
    Public
     
    (463)
  </label>
</div>
`;
